--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@babel/node": "^7.15.8",
+    "@babel/plugin-proposal-async-generator-functions": "^7.15.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/register": "^7.15.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,16 +24,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "css-loader": "^6.4.0",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "style-loader": "^3.3.0",
+    "typescript": "^4.4.4",
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.59.1"
   },
   "scripts": {
-    "start": "nodemon server.js --exec babel-node",
-    "build": "react-scripts build",
+    "start": "nodemon index.js",
+    "build": "INLINE_RUNTIME_CHUNK=false & webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,6 +60,9 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "nodemon": "^2.0.14",
+    "ts-loader": "^9.2.6",
+    "webpack-cli": "^4.9.1"
   }
 }
